--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,4 @@
-body {
-  /* background-image: linear-gradient(rgb(0, 0, 0), rgb(97, 97, 97)); */
-  background-color: black;
-  color: white;
+.App {
+  margin: 0 auto;
+  border: 1px solid red;
 }
