--- a/src/components/gifscontainer/GifsContainer.css
+++ b/src/components/gifscontainer/GifsContainer.css
@@ -1,12 +1,15 @@
 .gifs-container {
   display: flex;
   justify-content: center;
+  /* background-color: #1a1a1a; */
+  /* background-color: #313131; */
 }
 
 .gifs-innercontainer {
   display: flex;
+  justify-content: center;
   flex-wrap: wrap;
-  width: 1100px;
+  width: 100%;
 }
 
 .gif-card {
