Added functionality to input field. Working on search functionality.
App deployed to netlify

--- a/src/components/navbar/searchbar/Searchbar.css
+++ b/src/components/navbar/searchbar/Searchbar.css
@@ -20,6 +20,10 @@
   /* color: #1a1a1a; */
 }
 
+::-webkit-input-placeholder {
+  color: white;
+}
+
 .searchbar-container .search-button {
   position: absolute;
   right: 20px;
