Displaying gif in different view with title, creator and rating.

--- a/src/components/gifscontainer/GifsContainer.css
+++ b/src/components/gifscontainer/GifsContainer.css
@@ -1,8 +1,6 @@
 .gifs-container {
   display: flex;
   justify-content: center;
-  /* background-color: #1a1a1a; */
-  /* background-color: #313131; */
 }
 
 .gifs-innercontainer {
@@ -13,24 +11,22 @@
 }
 
 .gif-card {
-  /* border: 1px solid green; */
   margin: 10px 10px 25px;
 }
 
 /*========== when you hover over a gif========= */
 .gif-hover-container {
-  /* border: 1px solid blue; */
   width: 200px;
   height: 40px;
 }
 
 .gif-hover-container .gif-title {
-  /* color: black; */
   color: rgba(51, 51, 51, 0.7);
   margin: 5px 10px 0;
   font-family: "Roboto";
   font-size: 0.8rem;
   text-align: left;
+  text-transform: uppercase;
 }
 
 .gif-hover-container .gif-link p {
@@ -39,6 +35,7 @@
   font-family: "Roboto";
   font-size: 0.8rem;
   text-align: left;
+  text-transform: lowercase;
 }
 
 .gif-hover-container .gif-link p:hover {
