--- a/src/components/gifview/GifView.css
+++ b/src/components/gifview/GifView.css
@@ -1,5 +1,45 @@
-.gif-title {
-  margin: 1px solid blue;
-  font-size: 50px;
+.gif-view-card {
+  display: flex;
+  width: 100%;
+  margin-top: 50px;
+}
+
+.gif-view-card .gif-view-item {
+  width: 50%;
+  display: flex;
+  justify-content: center;
+  margin: 20px;
+}
+
+.gif-view-card .gif-view-item:last-child {
+  display: flex;
+  flex-direction: column;
+  border: 5px solid black;
+}
+
+.gif-view-item .gif-view-title {
+  padding: 20px 20px 0;
   color: black;
+  font-family: "Roboto";
+  letter-spacing: 1px;
+  text-transform: uppercase;
+  font-size: 3rem;
+  /* border: 1px solid red; */
+}
+
+.gif-view-item .gif-view-username {
+  color: black;
+  padding: 0 20px;
+  letter-spacing: 1px;
+  font-family: "Roboto";
+  text-align: right;
+}
+
+.gif-view-item .gif-view-rating {
+  color: black;
+  padding: 0 20px 20px;
+  font-family: "Roboto";
+  letter-spacing: 1px;
+  margin: 0;
+  text-align: right;
 }
