--- a/src/components/navbar/searchbar/Searchbar.css
+++ b/src/components/navbar/searchbar/Searchbar.css
@@ -2,7 +2,6 @@
   display: flex;
   align-items: center;
   margin: 0 30px;
-  /* border: 1px solid blue; */
 }
 
 .searchbar-container .search-input {
@@ -13,13 +12,11 @@
   outline: none;
   padding: 0 10px;
   background-image: linear-gradient(to right, #ca14a0, #f3142c);
-  /* margin: 0 105px 0 0; */
   margin-right: 20px;
   font-size: 1rem;
   font-weight: lighter;
   color: #fff;
   letter-spacing: 0.5px;
-  /* color: #1a1a1a; */
 }
 
 ::-webkit-input-placeholder {
@@ -27,11 +24,8 @@
 }
 
 .searchbar-container .search-button {
-  /* position: absolute; */
-  /* right: 20px; */
   border-radius: 50px;
   border: none;
-  /* background-image: linear-gradient(to right, #f3142c, #ca14a0); */
   background-color: #f3142c;
   font-family: "Roboto", sans-serif;
   font-size: 1rem;
@@ -39,13 +33,10 @@
   padding: 8px 20px;
   transition: all 0.3s;
   letter-spacing: 0.5px;
-  /* color: #1a1a1a; */
   color: rgba(255, 255, 255, 0.9);
 }
 
 .searchbar-container .search-button:hover {
   cursor: pointer;
-  background-image: linear-gradient(to right, #8a0d6c, #ca14a0);
-  color: white;
-  /* border: 2px solid white; */
+  background-color: #ff1fcb;
 }
