--- a/src/index.css
+++ b/src/index.css
@@ -4,4 +4,5 @@ body {
   font-family: sans-serif;
   /* width: 100%; */
   color: white;
+  /* background-image: linear-gradient(to right, #ffffff, #7f7886); */
 }
