--- a/src/components/gifview/GifView.css
+++ b/src/components/gifview/GifView.css
@@ -2,19 +2,29 @@
   display: flex;
   width: 100%;
   margin-top: 50px;
+  background-color: black;
 }
 
 .gif-view-card .gif-view-item {
-  width: 50%;
   display: flex;
   justify-content: center;
-  margin: 20px;
+  height: 400px;
+  border-radius: 3px;
+}
+.gif-view-card .gif-view-item:first-child {
+  padding: 0 20px;
+  background-color: #1a1a1a;
 }
 
 .gif-view-card .gif-view-item:last-child {
   display: flex;
   flex-direction: column;
-  border: 5px solid black;
+  width: 100%;
+  background-image: linear-gradient(
+    to bottom right,
+    rgb(185, 78, 228),
+    #f019bed7
+  );
 }
 
 .gif-view-item .gif-view-title {
@@ -24,22 +34,21 @@
   letter-spacing: 1px;
   text-transform: uppercase;
   font-size: 3rem;
-  /* border: 1px solid red; */
 }
 
 .gif-view-item .gif-view-username {
   color: black;
   padding: 0 20px;
-  letter-spacing: 1px;
   font-family: "Roboto";
   text-align: right;
+  font-size: 1.8rem;
 }
 
 .gif-view-item .gif-view-rating {
   color: black;
   padding: 0 20px 20px;
   font-family: "Roboto";
-  letter-spacing: 1px;
   margin: 0;
   text-align: right;
+  font-size: 1.4rem;
 }
