--- a/src/components/gifview/GifView.css
+++ b/src/components/gifview/GifView.css
@@ -2,29 +2,23 @@
   display: flex;
   width: 100%;
   margin-top: 50px;
-  background-color: black;
+  /* background-color: black; */
 }
 
 .gif-view-card .gif-view-item {
   display: flex;
   justify-content: center;
   height: 400px;
+  border: 0.5px solid black;
+  margin: 0 30px;
+  box-shadow: 5px 10px 10px #7777776e;
   border-radius: 3px;
-}
-.gif-view-card .gif-view-item:first-child {
-  padding: 0 20px;
-  background-color: #1a1a1a;
 }
 
 .gif-view-card .gif-view-item:last-child {
   display: flex;
   flex-direction: column;
   width: 100%;
-  background-image: linear-gradient(
-    to bottom right,
-    rgb(185, 78, 228),
-    #f019bed7
-  );
 }
 
 .gif-view-item .gif-view-title {
@@ -51,4 +45,27 @@
   margin: 0;
   text-align: right;
   font-size: 1.4rem;
+}
+
+/* =================== bottom link ==================== */
+.link-container {
+  /* border: 1px solid red; */
+  margin: 60px 30px 0;
+  display: flex;
+  justify-content: flex-end;
+}
+
+.gif-view-link {
+  padding: 15px 30px;
+  border-radius: 50px;
+  background-color: #ff1fcb;
+  color: #fff;
+  font-family: "Roboto", sans-serif;
+  letter-spacing: 0.5px;
+  transition: all 0.3s;
+}
+
+.gif-view-link:hover {
+  box-shadow: 5px 8px 8px #7a7a7a63;
+  background-color: #d21fff;
 }
