--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -43,13 +43,13 @@
 
 .searchbar-container .search-input {
   height: 2rem;
-  width: 400px;
+  width: 500px;
   border-radius: 5px;
   border: none;
   outline: none;
   padding: 0 10px;
   background-image: linear-gradient(to right, #ca14a0, #f3142c);
-  margin-right: 20px;
+  /* margin-right: 20px; */
   font-size: 1rem;
   font-weight: lighter;
   color: #fff;
