--- a/src/components/gifscontainer/GifsContainer.css
+++ b/src/components/gifscontainer/GifsContainer.css
@@ -47,7 +47,7 @@
   border: 100%;
   display: flex;
   justify-content: center;
-  margin: 20px 20px 60px;
+  margin: 20px 20px 80px;
 }
 
 .moregifs-button {
@@ -55,7 +55,7 @@
   outline: none;
   font-size: 2rem;
   border-radius: 100%;
-  padding: 3px 15px 8.7px 15px;
+  padding: 3px 15px 8.7px;
   vertical-align: middle;
   text-align: center;
   text-decoration: none;
@@ -66,12 +66,8 @@
   transition: all 0.3s;
 }
 
-.moregifs-container:last-child {
-  color: #ff1fcb;
-}
-
-.moregifs-container:hover {
-  color: #d21fff;
+.moregifs-button:last-child {
+  padding: 3px 18px 8.7px;
 }
 
 .moregifs-button:hover {
