--- a/src/components/gifview/GifView.css
+++ b/src/components/gifview/GifView.css
@@ -2,7 +2,6 @@
   display: flex;
   width: 100%;
   margin-top: 50px;
-  /* background-color: black; */
 }
 
 .gif-view-card .gif-view-item {
@@ -22,7 +21,7 @@
 }
 
 .gif-view-item .gif-view-title {
-  padding: 20px 20px 0;
+  padding: 20px 40px 0;
   color: black;
   font-family: "Roboto";
   letter-spacing: 1px;
@@ -30,27 +29,35 @@
   font-size: 3rem;
 }
 
+.gif-view-item .gif-view-url {
+  text-decoration: none;
+  font-family: "Roboto";
+  padding: 5px 40px 0;
+  color: #c917c9c0;
+  font-size: 1.2rem;
+}
+
 .gif-view-item .gif-view-username {
-  color: black;
-  padding: 0 20px;
+  color: #777777d3;
+  padding: 0 40px;
   font-family: "Roboto";
   text-align: right;
-  font-size: 1.8rem;
+  font-size: 1.2rem;
 }
 
 .gif-view-item .gif-view-rating {
-  color: black;
-  padding: 0 20px 20px;
+  color: #777777d3;
+  padding: 0 40px 20px;
   font-family: "Roboto";
   margin: 0;
   text-align: right;
-  font-size: 1.4rem;
+  font-size: 1.2rem;
 }
 
 /* =================== bottom link ==================== */
 .link-container {
   /* border: 1px solid red; */
-  margin: 60px 30px 0;
+  margin: 60px 30px 80px;
   display: flex;
   justify-content: flex-end;
 }
