--- a/src/components/gifview/GifView.css
+++ b/src/components/gifview/GifView.css
@@ -16,6 +16,8 @@
 
 .gif-view-card .gif-view-item:first-child {
   background-color: rgba(54, 54, 54, 0.452);
+  display: flex;
+  align-items: center;
 }
 
 .gif-view-card .gif-view-item:last-child {
@@ -114,21 +116,30 @@
   .gif-view-card .gif-view-item .gif-image {
     width: 200px;
     height: 200px;
+    /* padding: 20px 10px; */
+  }
+
+  .gif-view-card .gif-view-item {
+    margin: 0 15px;
   }
 
   .gif-view-item .gif-view-title {
-    font-size: 2rem;
+    font-size: 1.8rem;
+    padding: 20px 10px;
   }
 
   .gif-view-item .gif-view-url {
-    font-size: 1rem;
+    font-size: 0.8rem;
+    padding: 0 20px;
   }
 
   .gif-view-item .gif-view-username {
-    font-size: 1rem;
+    font-size: 0.8rem;
+    padding: 20px 10px;
   }
 
   .gif-view-item .gif-view-rating {
-    font-size: 1rem;
+    font-size: 0.8rem;
+    padding: 20px 10px;
   }
 }
