--- a/src/components/gifview/GifView.css
+++ b/src/components/gifview/GifView.css
@@ -23,7 +23,7 @@
 .gif-view-card .gif-view-item:last-child {
   display: flex;
   flex-direction: column;
-  /* width: 100%; */
+  width: 100%;
 }
 
 .gif-view-card .gif-view-item .gif-image {
@@ -104,6 +104,7 @@
 
   .gif-view-card .gif-view-item:last-child {
     margin-bottom: 40px;
+    width: auto;
   }
 
   .gif-view-card .gif-view-item .gif-image {
@@ -116,7 +117,10 @@
   .gif-view-card .gif-view-item .gif-image {
     width: 200px;
     height: 200px;
-    /* padding: 20px 10px; */
+  }
+
+  .gif-view-card {
+    margin-top: 20px;
   }
 
   .gif-view-card .gif-view-item {
@@ -141,5 +145,11 @@
   .gif-view-item .gif-view-rating {
     font-size: 0.8rem;
     padding: 20px 10px;
+  }
+
+  .link-container {
+    margin: 60px 20px 80px;
+    display: flex;
+    justify-content: flex-end;
   }
 }
