--- a/src/index.css
+++ b/src/index.css
@@ -5,4 +5,5 @@ body {
   /* width: 100%; */
   color: white;
   /* background-image: linear-gradient(to right, #ffffff, #7f7886); */
+  background-color: rgb(31, 31, 31);
 }
