--- a/src/components/gifscontainer/GifsContainer.css
+++ b/src/components/gifscontainer/GifsContainer.css
@@ -21,7 +21,8 @@
 }
 
 .gif-hover-container .gif-title {
-  color: rgba(51, 51, 51, 0.7);
+  /* color: rgba(51, 51, 51, 0.7); */
+  color: #9c9c9c;
   margin: 5px 10px 0;
   font-family: "Roboto";
   font-size: 0.8rem;
@@ -62,6 +63,7 @@
   text-decoration: none;
   display: inline-block;
   background-color: #ff1fcb;
+  /* background-color: #f3142c; */
   color: #fff;
   transition: all 0.3s;
 }
