Fixed input padding.

--- a/src/components/gifview/GifView.css
+++ b/src/components/gifview/GifView.css
@@ -45,7 +45,7 @@
   text-decoration: none;
   font-family: "Roboto";
   padding: 5px 40px 0;
-  color: #c917c9c0;
+  color: #c417c4;
   font-size: 1.2rem;
 }
 
